--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.0",
     "@types/eslint": "^8.56.12",
     "@types/node": "^20.17.19",
     "@types/react": "^18.3.18",
@@ -49,7 +50,7 @@
     "postcss": "^8.5.2",
     "prettier": "^3.5.1",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.0",
     "typescript": "^5.7.3"
   },
   "ct3aMetadata": {
