--- a/package.json
+++ b/package.json
@@ -20,18 +20,24 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.1.0",
+    "@neondatabase/serverless": "^0.10.4",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
     "@t3-oss/env-nextjs": "^0.10.1",
     "ai": "^4.1.40",
     "better-auth": "^1.1.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "drizzle-orm": "^0.33.0",
+    "drizzle-orm": "^0.39.3",
     "geist": "^1.3.1",
     "lucide-react": "^0.475.0",
     "next": "^15.1.7",
+    "next-safe-action": "^7.10.3",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
@@ -44,7 +50,7 @@
     "@types/react-dom": "^18.3.5",
     "@typescript-eslint/eslint-plugin": "^8.24.0",
     "@typescript-eslint/parser": "^8.24.0",
-    "drizzle-kit": "^0.24.2",
+    "drizzle-kit": "^0.30.4",
     "eslint": "^8.57.1",
     "eslint-config-next": "^15.1.7",
     "eslint-plugin-drizzle": "^0.2.3",
