--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@ai-sdk/google": "^1.1.14",
+    "@ai-sdk/openai": "^1.1.11",
+    "@clerk/nextjs": "^6.11.3",
     "@hookform/resolvers": "^4.1.0",
     "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-label": "^2.1.2",
@@ -34,6 +37,7 @@
     "lucide-react": "^0.475.0",
     "next": "^15.1.7",
     "next-safe-action": "^7.10.3",
+    "next-themes": "^0.4.4",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
