--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "dependencies": {
     "@ai-sdk/google": "^1.1.14",
-    "@ai-sdk/openai": "^1.1.11",
+    "@ai-sdk/openai": "^1.1.12",
     "@clerk/nextjs": "^6.11.3",
     "@hookform/resolvers": "^4.1.0",
     "@neondatabase/serverless": "^0.10.4",
@@ -43,8 +43,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-tweet": "^3.2.1",
     "server-only": "^0.0.1",
-    "tailwind-merge": "^3.0.1",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.5",
     "zod": "^3.24.2"
