--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@pinecone-database/pinecone": "^5.0.0",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.6",
     "@t3-oss/env-nextjs": "^0.10.1",
     "ai": "^4.1.40",
     "better-auth": "^1.1.18",
