--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "@hookform/resolvers": "^4.1.1",
     "@neondatabase/serverless": "^0.10.4",
     "@pinecone-database/pinecone": "^5.0.0",
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
@@ -52,6 +55,7 @@
     "server-only": "^0.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "ua-parser-js": "^2.0.2",
     "uuid": "^11.0.5",
     "zod": "^3.24.2"
   },
