--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache"
   },
   "dependencies": {
-    "@ai-sdk/google": "^1.1.14",
-    "@ai-sdk/openai": "^1.1.12",
-    "@clerk/nextjs": "^6.11.3",
-    "@hookform/resolvers": "^4.1.1",
+    "@ai-sdk/google": "^1.1.25",
+    "@ai-sdk/openai": "^1.2.5",
+    "@clerk/nextjs": "^6.12.5",
+    "@hookform/resolvers": "^4.1.3",
     "@neondatabase/serverless": "^0.10.4",
-    "@pinecone-database/pinecone": "^5.0.0",
+    "@pinecone-database/pinecone": "^5.1.1",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
@@ -35,47 +35,48 @@
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@t3-oss/env-nextjs": "^0.10.1",
-    "ai": "^4.1.40",
-    "babel-plugin-react-compiler": "^19.0.0-beta-e1e972c-20250221",
-    "better-auth": "^1.1.18",
+    "ai": "^4.1.61",
+    "babel-plugin-react-compiler": "^19.0.0-beta-e552027-20250112",
+    "better-auth": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.39.3",
     "geist": "^1.3.1",
     "lucide-react": "^0.475.0",
-    "next": "^15.1.7",
-    "next-safe-action": "^7.10.3",
-    "next-themes": "^0.4.4",
+    "next": "^15.2.2",
+    "next-safe-action": "^7.10.4",
+    "next-themes": "^0.4.6",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
-    "react-tweet": "^3.2.1",
+    "react-tweet": "^3.2.2",
     "server-only": "^0.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
-    "ua-parser-js": "^2.0.2",
-    "uuid": "^11.0.5",
+    "ua-parser-js": "^2.0.3",
+    "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.12",
-    "@types/node": "^20.17.19",
+    "@types/node": "^20.17.24",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
-    "@typescript-eslint/eslint-plugin": "^8.24.0",
-    "@typescript-eslint/parser": "^8.24.0",
-    "drizzle-kit": "^0.30.4",
+    "@typescript-eslint/eslint-plugin": "^8.26.1",
+    "@typescript-eslint/parser": "^8.26.1",
+    "drizzle-kit": "^0.30.5",
     "eslint": "^8.57.1",
-    "eslint-config-next": "^15.1.7",
+    "eslint-config-next": "^15.2.2",
     "eslint-plugin-drizzle": "^0.2.3",
-    "postcss": "^8.5.2",
-    "prettier": "^3.5.1",
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.3"
+    "typescript": "^5.8.2"
   },
   "ct3aMetadata": {
     "initVersion": "7.38.1"
