--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-toast": "^1.2.6",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.68.0",
+    "@types/lodash": "^4.17.16",
     "ai": "^4.1.61",
     "babel-plugin-react-compiler": "^19.0.0-beta-e552027-20250112",
     "better-auth": "^1.2.4",
@@ -47,6 +48,7 @@
     "drizzle-orm": "^0.39.3",
     "geist": "^1.3.1",
     "link-preview-js": "^3.0.14",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
     "next": "^15.2.2",
     "next-safe-action": "^7.10.4",
