--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "better-auth": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.39.3",
     "geist": "^1.3.1",
     "link-preview-js": "^3.0.14",
