--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.68.0",
     "@types/lodash": "^4.17.16",
@@ -51,6 +52,7 @@
     "link-preview-js": "^3.0.14",
     "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
+    "masonic": "^4.0.1",
     "next": "^15.2.2",
     "next-safe-action": "^7.10.4",
     "next-themes": "^0.4.6",
