--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.68.0",
     "@types/lodash": "^4.17.16",
+    "@vercel/analytics": "^1.5.0",
     "ai": "^4.1.61",
     "babel-plugin-react-compiler": "^19.0.0-beta-e552027-20250112",
     "better-auth": "^1.2.4",
